# PQC_Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml  quality.yml
bench/: benchmark_kem.c  parse_results.py
docs/: architecture.md  benchmark.md  cli.md  portfolio-summary.md  security.md  troubleshooting.md
include/: pqc_module.h
scripts/: build_linux.sh  build_windows.bat  run_all.sh  run_all_windows.bat
src/: main.c  pqc_kem.c  pqc_kem_backend.h  pqc_module.c  pqc_sig.c  pqc_sig_backend.h  pqc_utils.c
tests/: test_kat_mldsa.c  test_kem.c  test_negative.c  test_ref_kem.c  test_sig.c  test_utils.c
tests/data/: kat_mldsa.sig  kat_mldsa_msg.txt  kat_mldsa_pub.key  kat_mldsa_sec.key
